--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "description": "pr-reminder",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "woodfor",
   "license": "ISC",
   "dependencies": {
     "@google-cloud/local-auth": "^3.0.0",
     "@octokit/core": "^5.0.2",
+    "axios": "^1.6.3",
     "cheerio": "1.0.0-rc.12",
+    "dotenv": "^16.3.1",
     "googleapis": "^129.0.0",
+    "inquirer": "^9.2.12",
     "lodash": "^4.17.21",
     "marked": "^11.1.1",
     "parse-md": "^3.0.3",
